Fixes missing labels in the Renderer interface

--- a/WebContent/WEB-INF/zul/renderer/edit_general.zul
+++ b/WebContent/WEB-INF/zul/renderer/edit_general.zul
@@ -20,6 +20,8 @@
 			<columns sizable="false">
 				<column align="right" hflex="min" />
 				<column align="left" />
+				<column align="right" hflex="min" />
+				<column align="left" />
 			</columns>
 			<rows>
 				<row>
