Add commit to sql update completion in the database crawler

--- a/WebContent/WEB-INF/zul/crawler/database/crawl.zul
+++ b/WebContent/WEB-INF/zul/crawler/database/crawl.zul
@@ -191,8 +191,11 @@
 								</row>
 								<row>
 									<label value="SQL Update: " />
-									<textbox rows="10"
-										value="@{dbCrawlList.currentCrawl.sqlUpdate}" width="95%" />
+									<cell>
+										<textbox rows="10"
+											value="@{dbCrawlList.currentCrawl.sqlUpdate}" width="95%" />
+										
+									</cell>
 									<label
 										value="Enter any SQL query which be called for each indexed item ($PK) " />
 								</row>
