Database crawler: When using quoted id list in the sql update, quotes are escaped

--- a/WebContent/WEB-INF/zul/crawler/database/crawl.zul
+++ b/WebContent/WEB-INF/zul/crawler/database/crawl.zul
@@ -191,14 +191,14 @@
 								</row>
 								<row>
 									<label value="SQL Update: " />
-									<vbox width="100%">
+									<vlayout>
 										<textbox rows="5"
 											value="@{dbCrawlList.currentCrawl.sqlUpdate}" width="95%" />
 
 										<listbox mold="select"
 											selectedItem="@{dbCrawlList.currentCrawl.sqlUpdateMode}"
 											model="@{dbCrawlList.sqlUpdateModes}" />
-									</vbox>
+									</vlayout>
 									<label
 										value="Enter any SQL query which be called for each indexed item ($PK) " />
 								</row>
