--- a/WebContent/WEB-INF/zul/renderer/edit_css.zul
+++ b/WebContent/WEB-INF/zul/renderer/edit_css.zul
@@ -14,90 +14,9 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<grid>
-	<columns sizable="false">
-		<column align="right" hflex="min" />
-		<column align="left" hflex="min" />
-		<column align="right" hflex="min" />
-		<column align="left" hflex="min" />
-	</columns>
-	<rows>
-		<row>
-			<label value="Common: " />
-			<textbox value="@{renderer.currentRenderer.commonStyle}"
-				cols="70" multiline="true" rows="3" />
-			<label value="Input CSS style: " />
-			<textbox value="@{renderer.currentRenderer.inputStyle}"
-				cols="70" multiline="true" rows="3" />
-		</row>
-		<row>
-			<label value="Button: " />
-			<textbox value="@{renderer.currentRenderer.buttonStyle}"
-				cols="70" multiline="true" rows="3" />
-			<label value="Documents found: " />
-			<textbox
-				value="@{renderer.currentRenderer.documentFoundStyle}" cols="70"
-				multiline="true" rows="3" />
-		</row>
-		<row>
-			<label value="Autocomplete: " />
-			<textbox
-				value="@{renderer.currentRenderer.autocompleteStyle}" cols="70"
-				multiline="true" rows="3" />
-			<label value="Autocomplete list: " />
-			<textbox
-				value="@{renderer.currentRenderer.autocompleteListStyle}" cols="70"
-				multiline="true" rows="3" />
-		</row>
-		<row>
-			<label value="Autocomplete link: " />
-			<textbox
-				value="@{renderer.currentRenderer.autocompleteLinkStyle}" cols="70"
-				multiline="true" rows="3" />
-			<label value="Autocomplete link hover: " />
-			<textbox
-				value="@{renderer.currentRenderer.autocompleteLinkHoverStyle}"
-				cols="70" multiline="true" rows="3" />
-		</row>
-		<row>
-			<label value="Anchor link: " />
-			<textbox value="@{renderer.currentRenderer.alink}" cols="70"
-				multiline="true" rows="3" />
-			<label value="AnchorLink visited: " />
-			<textbox value="@{renderer.currentRenderer.avisited}"
-				cols="70" multiline="true" rows="3" />
-		</row>
-		<row>
-			<label value="Anchor link active: " />
-			<textbox value="@{renderer.currentRenderer.aactive}"
-				cols="70" multiline="true" rows="3" />
-			<label value="Anchor link Hover: " />
-			<textbox value="@{renderer.currentRenderer.ahover}"
-				cols="70" multiline="true" rows="3" />
-		</row>
-		<row>
-			<label value="Facet field div: " />
-			<textbox value="@{renderer.currentRenderer.facetStyle}"
-				cols="70" multiline="true" rows="3" />
-			<label value="Result div: " />
-			<textbox value="@{renderer.currentRenderer.resultStyle}"
-				cols="70" multiline="true" rows="3" />
-		</row>
-		<row>
-			<label value="Paging div: " />
-			<textbox value="@{renderer.currentRenderer.pagingStyle}"
-				cols="70" multiline="true" rows="3" />
-			<label value="Curent page: " />
-			<textbox value="@{renderer.currentRenderer.currentPageStyle}"
-				cols="70" multiline="true" rows="3" />
-		</row>
-	</rows>
-	<foot>
-		<footer span="4">
-			<vbox width="100%" align="center">
-				<button label="Restore default values"
-					onClick="renderer.onCssDefault()" />
-			</vbox>
-		</footer>
-	</foot>
-</grid>
+<vbox width="100%">
+	<textbox value="@{renderer.currentRenderer.css}" width="100%"
+		multiline="true" rows="40" />
+	<button label="Restore default values"
+		onClick="renderer.onCssDefault()" />
+</vbox>
