--- a/WebContent/WEB-INF/zul/home.zul
+++ b/WebContent/WEB-INF/zul/home.zul
@@ -14,6 +14,7 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
+<?init class="org.zkoss.zkplus.databind.AnnotateDataBinderInit"?>
 <window id="home"
 	use="com.jaeksoft.searchlib.web.controller.HomeController">
 	<grid visible="@{home.adminOrNoUser}" hflex="min">
