--- a/WebContent/index.zul
+++ b/WebContent/index.zul
@@ -14,8 +14,7 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<?init class="org.zkoss.zkplus.databind.AnnotateDataBinderInit"?>
-<window id="index" border="normal"
+<window border="normal" id="index"
 	use="com.jaeksoft.searchlib.web.controller.IndexController">
 	<caption image="images/oss_logo_32.png" label="@{index.version}">
 		<hbox align="center">
